# ROS_Project

./: LICENSE  README.md  requirement.txt
auto_arm /auto_arm/: CMakeLists.txt  rviz.rviz
auto_arm /auto_arm/config/: ros_controllers.yaml
auto_arm /auto_arm/launch/: display.launch  display（复件）.launch  gazebo.launch
auto_arm /auto_arm_control/: CMakeLists.txt  auto_arm_control.ino  package.xml
auto_arm /auto_arm_moveit/: CMakeLists.txt  package.xml
auto_arm/auto_arm/: CMakeLists.txt  Readme.md  package.xml
auto_arm/auto_arm/config/: joint_names_auto_arm.yaml
auto_arm/auto_arm/launch/: gazebo.launch
auto_arm/auto_arm/meshes/: base_link.STL  claw_r.STL  link1.STL  link2claw_l.STL  link2claw_r.STL  link3.STL  link4.STL  link7_r.STL
auto_arm/auto_arm/urdf/: auto_arm.csv  auto_arm.urdf  auto_arm（复件）.urdf
joy_control/: CMakeLists.txt  introduction.txt  package.xml
joy_control/launch/: joy_control_start.launch  joy_control_start（复件）.launch
joy_control/scripts/: joy_control_arm.py  peijian_move.py  reconstructed_excavator_control.py
joy_control/src/: joy_control.cpp  joy_control_arm.cpp
mycar_description/: package.xml
mycar_description/launch/: car_load.launch
mycar_description/urdf/: car.urdf.xacro  car_base.urdf.xacro  car_laser.urdf.xacro
mycar_nav/: CMakeLists.txt  package.xml
mycar_nav/launch/: gmapping.launch  lidar.launch  slam.launch  xbox_control.launch
mycar_nav/scripts/: lidar_pub.py  lidar_reader.py
xv_11_laser_driver-hydro-devel/launch/: neato.launch
xv_11_laser_driver-hydro-devel/src/: xv11_laser.cpp
(+29 files in other folders)
